It seems that [https://youtrack.jetbrains.com/issue/CPP-23878] has not been resolved, we temporarily switch to VS2022 (instead of CLion) (it seems that VS responds much faster)

--- a/kaleidoscope/CMakeLists.txt
+++ b/kaleidoscope/CMakeLists.txt
@@ -19,7 +19,7 @@ include(LLVMConfig)
 message(STATUS "Found LLVM Package Version: ${LLVM_PACKAGE_VERSION}")
 message(STATUS "LLVM Built Type: ${LLVM_BUILD_TYPE}")
 
-llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES mcjit interpreter native ipo)
+llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES core orcjit mcjit interpreter native ipo)
 
 set(
 		${PROJECT_NAME}_SOURCE
