--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -22,12 +22,8 @@ include(${HELLO_LLVM_MODULE_PATH}/config_build_type.cmake)
 target_compile_options(
 			${PROJECT_NAME}
 			PRIVATE
-			#`llvm-config --cxxflags --ldflags --system-libs --libs core orcjit native`
-			# vvv
-			# -I/usr/lib/llvm-12/include -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS                                                                                                     
-			#-L/usr/lib/llvm-12/lib                                                                                                  
-			#-lLLVM-12 
-
-			$<$<CXX_COMPILER_ID:CLANG>:-rdynamic>
-			$<$<CXX_COMPILER_ID:GCC>:-Wl -export-dynamic>
+			$<$<CXX_COMPILER_ID:Clang>:-rdynamic>
+			$<$<CXX_COMPILER_ID:GNU>:-export-dynamic>
 )
+
+
