add linker options to solve the problem that our symbols do not exist in the dynamic symbol table :)

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,12 +18,9 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
 
 include(${HELLO_LLVM_MODULE_PATH}/config_build_type.cmake)
 
-# not work :(
-target_compile_options(
-			${PROJECT_NAME}
-			PRIVATE
-			$<$<CXX_COMPILER_ID:Clang>:-rdynamic>
-			$<$<CXX_COMPILER_ID:GNU>:-export-dynamic>
+target_link_options(
+		${PROJECT_NAME}
+		PRIVATE
+		$<$<CXX_COMPILER_ID:Clang>:-rdynamic>
+		$<$<CXX_COMPILER_ID:GNU>:-export-dynamic>
 )
-
-
